@@ -81,6 +81,16 @@
 							</config>
 						</TCEforms>
 					</boostFunction>
+					<boostQuery>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>Boost Query</label>
+							<config>
+								<type>input</type>
+								<eval>trim</eval>
+							</config>
+						</TCEforms>
+					</boostQuery>
 				</el>
 			</ROOT>
 		</sQuery>
